# Engine

./: .editorconfig  .gitignore  .gitmodules  AnimationHandler_8h_source.html  AssetManager_8h_source.html  BackgroundMusic_8h_source.html  CMakeLists.txt  ColliderComponent_8h_source.html  CollisionHandler_8cpp.html  CollisionHandler_8cpp__incl.map  CollisionHandler_8cpp__incl.md5  CollisionHandler_8h.html  CollisionHandler_8h.js  CollisionHandler_8h__dep__incl.map  CollisionHandler_8h__dep__incl.md5  CollisionHandler_8h__incl.map  CollisionHandler_8h__incl.md5  CollisionHandler_8h_source.html  Component_8h_source.html  Components_8h_source.html  ConfigLoader_8h_source.html  Constants_8h_source.html  DataComponent_8h_source.html  Defines_8h_source.html  Direction_8h_source.html  Doxyfile  ECS_8h_source.html  Entity_8h_source.html  EventManager_8h_source.html  GameFactory_8h_source.html  GameInternal_8h_source.html  GameObject_8h_source.html  GameRegistryHelper_8h_source.html  Game_8h_source.html  HealthComponent_8h_source.html  InputComponent_8h_source.html  InputManager_8h_source.html  InteractionComponent_8h_source.html  InteractionEventdataStruct_8h_source.html  InteractionListener_8h_source.html  (+301 more)
.github/workflows/: cpp-linter.yaml  doxygen.yaml
TestProject/: TestProject.sln
TestProject/TestProject/: ColliderComponent.h  Components.h  ECS.cpp  Game.cpp  Game.h  SpriteComponent.h  TestProject.vcxproj  TestProject.vcxproj.filters  TextureDict.h  TextureManager.cpp  TextureManager.h  TileComponent.h  TransformComponent.h  Vector2D.h
TestProject/TestProject/assets/: MapNew-Sheet.aseprite  MapNew.aseprite  MapTest.aseprite  SDL_map_test.txt
TestProject/TestProject/assets/MapNewBackup/: sprite.json
TestProject/TestProject/x64/Debug/: TestProject.exe.recipe  TestProject.ilk  game.obj.enc  vc143.idb
TestProject/TestProject/x64/Debug/TestProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TestProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
assets/: Map.aseprite  MapNew.aseprite  MapNew.json  VictoryBackup.aseprite  title_screen_backup.aseprite  water1.ase
docs/: Doxyfile  header.html
docs/diagrams/: .clang-uml  howto.md
docs/docker/: Dockerfile  entrypoint.sh
docs/md-pages/: config.md  entitiesAndComponents.md  eventhandling.md  inputhandling.md  main.md  quickstart.md  tilemaps.md
include/: AnimationHandler.h  AssetManager.h  BackgroundMusic.h  ColliderComponent.h  CollisionHandler.h  Component.h  Components.h  ConfigLoader.h  Constants.h  DataComponent.h  Defines.h  DialogHandler.h  Direction.h  ECS.h  Entity.h  EventListener.h  EventManager.h  Game.h  GameFactory.h  GameInternal.h  GameObject.h  GameRegistrar.h  GameRegistryHelper.h  HealthComponent.h  Input.h  InputAction.h  InputActionType.h  InputComponent.h  InputManager.h  InputSystemComponent.h  InteractionComponent.h  InteractionEventdataStruct.h  InteractionListener.h  InteractionManager.h  Key.h  KeyboardController.h  Manager.h  Map.h  PickupComponent.h  PickupManager.h  (+22 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  (+38 more)
src/: AssetManager.cpp  ColliderComponent.cpp  CollisionHandler.cpp  ConfigLoader.cpp  DialogHandler.cpp  ECS.cpp  ECS.h  Entity.cpp  EventManager.cpp  Game.cpp  GameInternal.cpp  GameObject.cpp  GameObject.h  HealthComponent.cpp  Input.cpp  InputComponent.cpp  InputManager.cpp  InputSystemComponent.cpp  InteractionComponent.cpp  InteractionEventdataStruct.cpp  InteractionManager.cpp  KeyboardController.cpp  KeyboardController.h  Manager.cpp  Map.cpp  Map.h  PickupComponent.cpp  PickupManager.cpp  PlayerComponent.cpp  PopupWindow.cpp  Powerup.cpp  PowerupComponent.cpp  ProjectileComponent.cpp  RenderManager.cpp  RenderObject.cpp  Scene.cpp  SoundManager.cpp  SpriteComponent.cpp  StatEffectsComponent.cpp  TextManager.cpp  (+6 more)
